[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
gloo = "0.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
yew = { version = "0.21", features = ["csr"] }
